--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <!--HEADER-->
     <div class="header">
-      <div
+         <div class="header_logo"><img src="images_/logo.JPG"></div>
+         <div class="header_greeting"><h1>Selamat Datang</h1></div>
+       </div>
     
     <!--MENU-->
     
