--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!--HEADER-->
     <div class="header">
-         <div class="header_logo"><img src="images_/logo.JPG"></div>
+         <div class="header_logo"><img src="images/logo.JPG"></div>
          <div class="header_greeting"><h1>Selamat Datang</h1></div>
        </div>
     
