--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                   <th><font size="50">Selamat Datang</font></th>
                </tr>
             </table>
+            
+              <br>
+               <table width="75%" border="3">
+                  <tr>
+                    <td> width="30%">
+                        &nbsp;
+                         <h4>Senarai Menu</h4>
+                         href="index.html">"UTAMA</a>
             <!---MENU--->
             
             <!---FOOTER--->
