--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <br>
                <table width="75%" border="3">
                   <tr>
-                    <td> width="30%">
+                       <td> width="30%</td>
                         &nbsp;
                          <h4>Senarai Menu</h4>
                          href="index.html">"UTAMA</a>
