--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         
         <!--CONTENT-->
-        <div class="kandungan"><img src="images/kek.JPG">width="150px">
+        <div class="kandungan"><img src="images/kek.JPG"width="150px">
           <br>
           Sila komen tentang produk ini
           <a href="komen.html">di sini</a>
